# sine-benchmark

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
tests/: cli.rs
tests/test_files/: invalid_json.json  valid_json.json  wrong_file_format.txt  wrong_types.json
