[package]
name = "p2p-upnp-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = [
    "tokio",
    "dns",
    "gossipsub",
    "macros",
    "noise",
    "ping",
    "tcp",
    "upnp",
    "yamux",
    "serde",
] }
env_logger = "0.10.0"
log = "0.4.19"
bincode = "1.3.3"
serde = "1.0.189"
rand = "0.8.5"
