[package]
name = "sine-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
libp2p = { version = "0.52.4", features = [
    "tokio",
    "gossipsub",
    "macros",
    "noise",
    "tcp",
    "upnp",
    "yamux",
    "serde",
] }
rsa = { version = "0.9.2", features = ["pem", "sha2"] }
futures = "0.3.28"
env_logger = "0.10.0"
log = "0.4.19"
bincode = "1.3.3"
serde = "1.0.189"
serde_json = "1.0.107"
rand = "0.8.5"
blake3 = "1.5.0"
assert_cmd = "2.0"
predicates = "3.0"
